# C867_Scripting_And_Programming_Applications

./: README.md
StudentSystem/: CMakeLists.txt  StudentSystem.sln
StudentSystem/StudentSystem/: StudentSystem.vcxproj  StudentSystem.vcxproj.filters  degree.h  main.cpp  roster.cpp  roster.h  student.cpp  student.h
StudentSystem/StudentSystem/x64/Debug/: StudentSystem.exe.recipe  StudentSystem.ilk  vc143.idb
StudentSystem/StudentSystem/x64/Debug/StudentSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StudentSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
